--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "leaflet": "^1.9.0",
     "osmtogeojson": "^3.0.0-beta.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
