--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-leaflet/core": "^2.0.1",
     "axios": "^0.27.2",
     "leaflet": "^1.9.0",
     "osmtogeojson": "^3.0.0-beta.4",
@@ -20,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
