--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^2.1.0",
     "@react-leaflet/core": "^2.0.1",
     "axios": "^0.27.2",
     "leaflet": "^1.9.0",
@@ -18,10 +19,6 @@
     "react-leaflet": "^4.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "vite": "^3.1.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite": "^3.1.0"
   }
 }
